--- a/Styles/mystyles.css
+++ b/Styles/mystyles.css
@@ -9,6 +9,30 @@
 }
 .myimage {
     height: 400px;
+    width: auto;
+    position: relative;
+    overflow: hidden;
+    float: right;
+    border-radius: 10%;
+    margin: 10px;
+    box-sizing: border-box;
+}
+.shortbio {
+    top:70%;
+    left: 26%;
+    right: 40%;
+    height: 500px;
+    word-wrap: break-word;
+    text-align: justify;
+}
+.mypicturelayout {
+    top: 660px;
+    left: 60%;
+    right: 50%;
+    height: 300px;
+}
+.section-p {
+    text-align: justify;
 }
 .sectionheading1 {
     color: #212529;
@@ -45,7 +69,7 @@ hr.solid {
 .footer {
     position:absolute ;
     left: 0;
-    bottom: -800px;
+    /* bottom: -800px; */
     width: 100%;
     color: white;
     text-align: center;
@@ -53,36 +77,31 @@ hr.solid {
  .about-footer {
     position:absolute ;
     left: 0;
-    bottom: -3000px;
+    /* bottom: -3000px; */
     width: 100%;
     color: white;
     text-align: center;}
  .footer-resume {
     position:absolute ;
     left: 0;
-    bottom: -3200px;
+    /* bottom: -3200px; */
     width: 100%;
     color: white;
     text-align: center;
  }
 .maintext {
+    text-align: justify;
     font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-size: 25px;
+    line-height: 1.5em;
 }
 .back-to-top {
     text-align: center;
 }
-.shortbio {
-    top: 615px;
-    left: 26%;
-    right: 40%;
-    height: 300px;
-    word-wrap: break-word;
-}
 .shortbiounder {
     top: 950px;
     left: 26%;
-    right:26%;
+    right:30%;
     height: 310px;
 }
 .videobox {
@@ -91,15 +110,8 @@ hr.solid {
     right:26%;
     height: 410px;
 }
-.mypicturelayout {
-    top: 660px;
-    left: 60%;
-    right: 27%;
-    height: 300px;
-    /* border: solid 2px #fe5e55; */
-}
 .seeresume {
-    top: 1360px;
+    top: 135%;
     right: 26%;
     left: 60%;
     height: 40px;
@@ -107,7 +119,7 @@ hr.solid {
     background: #fe5e55; */
 }
 .seeaboutme {
-    top: 1310px;
+    top: 130%;
     right: 26%;
     left: 60%;
     height: 40px;
