--- a/Styles/bootstyles.css
+++ b/Styles/bootstyles.css
@@ -1,4 +1,6 @@
 /* Custom Tableau Styles and Organization*/
+/* Zach Schelin */
+/* Last Edited 8:01pm on 4/16/2022 */
 .custom1 {
     color: #212529;
     font-weight: bold;
